# alexpeits.github.io

./: .envrc  .gitignore  .markdownlint.yml  .travis.yml  00-home.md  01-blog.md  CNAME  Gemfile  Makefile  README.md  _config.yml  about.html  about.md  alexpeits-github-io.cabal  alexpeits.cabal  archive.html  atom.xml  blog.html  build-info.json  build-info.txt  config.yml  default.nix  drafts.html  feed.xml  front_matter_to_json.py  index.html  music.html  new-post  others.html  package.json  peits.cabal  presentations.html  projects.html  projects.md  projects.nix  publish.sh  pygments_filter.hs  run.sh  script.js  shake  (+7 more)
.circle/: config.yaml
.circleci/: config.yaml  config.yml  publish.sh
.github/config/: markdown_link_check.json
.github/workflows/: build_and_deploy.yml  test.yml
_data/: social.yml
_includes/: category-links.html  comments.html  copyright.html  custom-foot.html  disqus.html  footer.html  head.html  header.html  page-links.html  post-meta.html  post-tags.html  related_posts.html  series.html  sidebar-icon-links.html  sidebar.html  tags-list.html
_layouts/: category.html  default.html  page.html  post.html  postindex.html
_posts/: 2017-02-12-org-timesheets.md  2017-02-12-timesheets.md  2017-02-14-shell-commands-avoid.md  2018-03-23-welcome-to-jekyll.markdown  2018-09-27-haskell-proofs.md
_sass/hydeout/: _layout.scss  _posts.scss  _variables.scss
_site/: 404.html  feed.xml  index.html  tags.html
_site/about/: index.html
_site/assets/css/: main.css
_site/code/2018/03/23/: welcome-to-jekyll.html
about/: index.html  index.md
app/: Main.hs  NewPost.hs
app/Peits/: Config.hs  Constants.hs  Env.hs  Html.hs  Options.hs  Pandoc.hs  Routes.hs  Template.hs  Types.hs  Util.hs
articles/17/: org-timesheets.html
articles/18/: haskell-proofs.html
assets/css/: custom.css
blog/: 2017_06_20_avoid_slow_commands.html  2017_06_29_avoid_slow_commands.html  2017_06_29_avoid_slow_commands.xml  2017_06_29_org_timesheet.html  asdf.html  asdf.xml  index.html  index.xml  post1.html
blog/2017/01/24/: introducing.html
citations/: stitch.bib
css/: code.css  code_default.css  code_prismjs.css  code_pygments.css  custom.css  default.css  friendly.css  print.scss  solarized-light.css  solarized.css  syntax.css  tufte.css  tufte.scss
js/: dark-mode.js  footnotes.js
lists/: projects.html  projects.yml  talks.html  talks.yml
nix/: alexpeits-github-io.nix  nixpkgs.json  site.nix  sources.json
pages/: about.html  about.md  meta.html  meta.md  projects.yml  talks.html  talks.yml
posts/: 2017-02-12-org-timesheets.html  2017-02-12-org-timesheets.md  2018-09-27-haskell-proofs.html  2018-09-27-haskell-proofs.md  other.md  test.md
scripts/: build-info-gh-actions.sh
src/: .gitignore  config.yml
src/site/: index.md  test.md
src/site/blog/: introducing.md
static/: keybase.txt
static/css/: code.css  code_default.css  code_prismjs.css  code_pygments.css  default.css  saguine.css  site.css  syntax.css
static/js/: dark-mode.js  footnotes.js
tags/: dependent types.html  dependent-types.html  emacs.html  haskell.html  index.html  index.md
talks/: index.html  index.md
templates/: archive.html  atom_feed.mustache  default.html  default.mustache  draft_list.mustache  new_post.mustache  page.mustache  post-table.html  post.html  post.mustache  post_list.mustache  post_list_tag.mustache  project_list.mustache  projects.mustache  tag-list.html  tag_list.mustache  talk_list.mustache  talks.mustache
