cabal-version: 2.2

name:            peits
version:         0.1.0.0
description:     See <https://github.com/alexpeits/alexpeits.github.io#readme>
homepage:        https://github.com/alexpeits/alexpeits.github.io#readme
bug-reports:     https://github.com/alexpeits/alexpeits.github.io/issues
maintainer:      alexpeitsinis@gmail.com
author:          Alex Peitsinis
copyright:       2020 Alex Peitsinis
license:         BSD-3-Clause
license-file:    LICENSE
build-type:      Simple

source-repository head
  type:     git
  location: https://github.com/alexpeits/alexpeits.github.io

executable peits
  main-is:          Main.hs
  hs-source-dirs:   app
  other-modules:    Peits.Pandoc
                    Peits.Types
                    Peits.Util
  ghc-options:      -Wall -Wredundant-constraints
                    -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  build-depends:
      aeson >= 1.4.7  && < 1.5
    , base >= 4.13.0 && < 4.14
    , bytestring >= 0.10.10 && < 0.11
    , containers >= 0.6.2 && < 0.7
    , interpolate >= 0.2.1 && < 0.3
    , megaparsec >= 8.0.0 && < 8.1
    , mtl >= 2.2.2  && < 2.3
    , network-uri >= 2.6.3 && < 2.7
    , pandoc >= 2.9.2 && < 2.10
    , pandoc-types >= 1.20 && < 1.21
    , parser-combinators >= 1.2.1 && < 1.3
    , process >= 1.6.8 && < 1.7
    , shake >= 0.19.1 && < 0.20
    , stache >= 2.1.1  && < 2.2
    , text >= 1.2.4  && < 1.3
    , time >= 1.9.3  && < 1.10
    , unordered-containers >= 0.2.10 && < 0.3
    , vector >= 0.12.1 && < 0.13
    , yaml >= 0.11.4 && < 0.12

