cabal-version: 2.2
name:          peits
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     2020 Alex Peitsinis
maintainer:    alexpeitsinis@gmail.com
author:        Alex Peitsinis
homepage:      https://github.com/alexpeits/alexpeits.github.io#readme
bug-reports:   https://github.com/alexpeits/alexpeits.github.io/issues
description:
    See <https://github.com/alexpeits/alexpeits.github.io#readme>

build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/alexpeits/alexpeits.github.io

executable peits
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Peits.Config
        Peits.Constants
        Peits.Env
        Peits.Html
        Peits.Options
        Peits.Pandoc
        Peits.Routes
        Peits.Template
        Peits.Types
        Peits.Util

    default-language: Haskell2010
    ghc-options:
        -Wall -Wredundant-constraints -O2 -threaded -rtsopts
        -with-rtsopts=-N

    build-depends:
        aeson >=1.5.5 && <1.6,
        base >=4.14.1 && <4.15,
        bytestring >=0.10.12 && <0.11,
        containers >=0.6.2 && <0.7,
        cryptonite >= 0.27 && < 0.28
        megaparsec >=9.0.1 && <9.1,
        mtl >=2.2.2 && <2.3,
        network-uri >=2.6.4 && <2.7,
        pandoc >=2.11.4 && <2.12,
        pandoc-types >=1.22 && <1.23,
        parser-combinators >=1.2.1 && <1.3,
        process >=1.6.9 && <1.7,
        shake >=0.19.4 && <0.20,
        stache >=2.2.0 && <2.3,
        string-interpolate >=0.3.0 && <0.4,
        text >=1.2.4 && <1.3,
        time >=1.9.3 && <1.10,
        unordered-containers >=0.2.13 && <0.3,
        vector >=0.12.2 && <0.13,
        yaml >=0.11.5 && <0.12,
