cabal-version: 2.2
name:          peits
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     2020 Alex Peitsinis
maintainer:    alexpeitsinis@gmail.com
author:        Alex Peitsinis
homepage:      https://github.com/alexpeits/alexpeits.github.io#readme
bug-reports:   https://github.com/alexpeits/alexpeits.github.io/issues
description:
    See <https://github.com/alexpeits/alexpeits.github.io#readme>

build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/alexpeits/alexpeits.github.io

executable peits
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Peits.Config
        Peits.Constants
        Peits.Env
        Peits.Html
        Peits.Options
        Peits.Pandoc
        Peits.Routes
        Peits.Template
        Peits.Types
        Peits.Util

    default-language: Haskell2010
    ghc-options:
        -Wall -Wredundant-constraints -O2 -threaded -rtsopts
        -with-rtsopts=-N

    build-depends:
        aeson >= 2.0.3 && < 2.1,
        base >= 4.15.1 && < 4.16,
        containers >= 0.6.4 && < 0.7,
        bytestring >= 0.10.12 && < 0.11,
        mtl >= 2.2.2 && < 2.3,
        text >= 1.2.5 && < 1.3,
        time >= 1.9.3 && < 1.10,
        unordered-containers >= 0.2.17 && < 0.3,
        vector >= 0.12.3 && < 0.13,
        cryptonite >= 0.29 && < 0.30,
        megaparsec >= 9.2.0 && < 9.3,
        parser-combinators >= 1.3.0 && < 1.4,
        network-uri >= 2.6.4 && < 2.7,
        pandoc >= 2.17.1 && < 2.18,
        pandoc-types >= 1.22.2 && < 1.23,
        process >= 1.6.13 && < 1.7,
        yaml >= 0.11.8 && < 0.12,
        shake >= 0.19.6 && < 0.20,
        stache >= 2.3.1 && < 2.4,
        string-interpolate >= 0.3.1 && < 0.4,
